packages/fortifier-macros-tests/tests/validations/range/unknown_fail.stderr
error: unknown parameter
 --> tests/validations/range/unknown_fail.rs:5:22
  |
5 |     #[validate(range(unknown = 2))]
  |                      ^^^^^^^
